--- a/index.html
+++ b/index.html
@@ -1,21 +1,89 @@
 <!doctype html>
 <html lang="nl">
-	
+
 <head>
 	<meta charset="UTF-8">
 	<meta name="author" content="jouw naam">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	
+
 	<title>Howdy FED2324</title>
-	
+
 	<link href="styles/style.css" rel="stylesheet">
 	<link rel="icon" type="image/svg+xml" href="images/favicon.svg">
 </head>
 
 <body>
-	<h1>Howdy FED2324</h1>
+
+	<header>
+		<nav>
+			<div>
+
+			</div>
+
+		</nav>
+
+		<nav>
+			<ul>
+				<li> <a href=""> New collection </a> </li>
+				<li> <a href=""> Autumn winter 2023 </a> </li>
+				<li> <a href=""> Apparel </a> </li>
+				<li> <a href=""> Footwear </a> </li>
+				<li> <a href=""> Collections </a> </li>
+				<li> <a href=""> Acessoires </a> </li>
+				<li> <a href=""> Brands </a> </li>
+				<li> <a href=""> Blog </a> </li>
+			</ul>
+		</nav>
+	</header>
+
+	<main>
+
+
+
+
+
+		<ul>
+			<li>
+				<img src="images/blog1.jpg" alt="">
+				<h2>Bonnefanten presents 'BLKNWS' by Khalil Joseph </h2>
+			</li>
+
+			<li>
+				<img src="images/blog2.jpg" alt="">
+				<h2> Patta homecoming 2019 capsule collection</h2>
+			</li>
+
+			<li>
+				<img src="images/blog3.jpg" alt="">
+				<h2> Patta x C.P. comapany Milan launch event </h2>
+			</li>
+
+			<li>
+				<img src="images/blog4.jpg" alt="">
+				<h2> Patta by you </h2>
+			</li>
+
+			<li>
+				<img src="images/blog5.jpg" alt="">
+				<h2> #11/11 Bart Julius Peters </h2>
+			</li>
+
+		</ul>
+
+	</main>
+
+
+	<footer>
+		<h2> Subscribe to our newsletter </h2>
+
+	</footer>
+
+
 
 	<script defer src="scripts/script.js"></script>
+
+
+
 </body>
-	
+
 </html>
