--- a/index.html
+++ b/index.html
@@ -17,10 +17,14 @@
 	<header>
 		<nav>
 			<div>
-
+				<!-- menu burger maken hier -->
 			</div>
 
 		</nav>
+
+	<!--	<li>
+			Free shipping on eu orders above €250
+		</li> -->
 
 		<nav>
 			<ul>
@@ -38,9 +42,7 @@
 
 	<main>
 
-
-
-
+		<h1>Lookbook</h1>
 
 		<ul>
 			<li>
