--- a/index.html
+++ b/index.html
@@ -1,76 +1,122 @@
 <!doctype html>
-<html lang="nl">
+<html lang="en">
 
 <head>
 	<meta charset="UTF-8">
 	<meta name="author" content="jouw naam">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
-	<title>Howdy FED2324</title>
+	<title>Patta</title>
 
-	<link href="styles/style.css" rel="stylesheet">
-	<link rel="icon" type="image/svg+xml" href="images/favicon.svg">
+	<link href="./styles/style.css" rel="stylesheet">
+	<link href="./styles/blog.css" rel="stylesheet">
+	<link rel="icon" type="image/svg+xml" href="./images/favicon.svg">
 </head>
 
 <body>
 
 	<header>
-		<nav>
-			<div>
-				<!-- menu burger maken hier -->
-			</div>
-
-		</nav>
-
-	<!--	<li>
+		<p>
 			Free shipping on eu orders above €250
-		</li> -->
+		</p>
+
+		<section>
+			<ul>
+				<li>
+					<img src="./images/pattaLogo.png" alt="">
+				</li>
+			</ul>
+		</section>
 
 		<nav>
 			<ul>
-				<li> <a href=""> New collection </a> </li>
-				<li> <a href=""> Autumn winter 2023 </a> </li>
-				<li> <a href=""> Apparel </a> </li>
-				<li> <a href=""> Footwear </a> </li>
-				<li> <a href=""> Collections </a> </li>
-				<li> <a href=""> Acessoires </a> </li>
-				<li> <a href=""> Brands </a> </li>
-				<li> <a href=""> Blog </a> </li>
+				<li>
+					<button> Menu </button>
+				</li>
+				<li>New arrivals </li>
+				<li>Latest footwear</li>
+				<li> Autumn winter 2023</li>
+				<li> Apparel </li>
+				<li> Footwear </li>
+				<li> Collections </li>
+				<li> Accessories </li>
+				<li> Brands </li>
+				<li> Lookbooks </li>
+				<li> Blog </li>
+				<li> Raffles </li>
+				<li> Patta mobile app </li>
+				<li> In-store exclusives </li>
 			</ul>
 		</nav>
+		<!-- menu burger maken hier -->
+
+
+
+
+		<nav>
+			<ul>
+				<li> <a href="#"> New collection </a> </li>
+				<li> <a href="#"> Autumn winter 2023 </a> </li>
+				<li> <a href="#"> Apparel </a> </li>
+				<li> <a href="#"> Footwear </a> </li>
+				<li> <a href="#"> Collections </a> </li>
+				<li> <a href="#"> Acessoires </a> </li>
+				<li> <a href="#"> Brands </a> </li>
+				<li> <a href="#"> Blog </a> </li>
+			</ul>
+		</nav>
+
 	</header>
 
 	<main>
 
 		<h1>Lookbook</h1>
 
-		<ul>
-			<li>
-				<img src="images/blog1.jpg" alt="">
-				<h2>Bonnefanten presents 'BLKNWS' by Khalil Joseph </h2>
-			</li>
+		<section>
+			<!-- header!! -->
+			<ul>
+				<li>
+					<h2>Bonnefanten presents 'BLKNWS' by Khalil Joseph </h2>
+					<img src="./images/blog1.jpg" alt="">
+				</li>
 
-			<li>
-				<img src="images/blog2.jpg" alt="">
-				<h2> Patta homecoming 2019 capsule collection</h2>
-			</li>
+				<li>
+					<h2> Patta homecoming 2019 capsule collection</h2>
+					<img src="./images/blog2.jpg" alt="">
+				</li>
 
-			<li>
-				<img src="images/blog3.jpg" alt="">
-				<h2> Patta x C.P. comapany Milan launch event </h2>
-			</li>
+				<li>
+					<h2> Patta x C.P. comapany Milan launch event </h2>
+					<img src="./images/blog3.jpg" alt="">
+				</li>
 
-			<li>
-				<img src="images/blog4.jpg" alt="">
-				<h2> Patta by you </h2>
-			</li>
+				<li>
+					<h2> Patta by you </h2>
+					<img src="./images/blog4.jpg" alt="">
+				</li>
 
-			<li>
-				<img src="images/blog5.jpg" alt="">
-				<h2> #11/11 Bart Julius Peters </h2>
-			</li>
+				<li>
+					<h2> #11/11 Bart Julius Peters </h2>
+					<img src="./images/blog5.jpg" alt="">
+				</li>
 
-		</ul>
+				<li>
+					<h2> Nocta as seen by patta </h2>
+					<img src="./images/blog6.webp" alt="">
+				</li>
+
+				<li>
+					<h2> ss20 ripstop bag collection </h2>
+					<img src="./images/blog 7.webp" alt="">
+				</li>
+
+				<li>
+					<h2> patta w/ lasha </h2>
+					<img src="./images/blog8.webp" alt="">
+				</li>
+
+			</ul>
+		</section>
 
 	</main>
 
@@ -78,11 +124,27 @@
 	<footer>
 		<h2> Subscribe to our newsletter </h2>
 
+		<label for="email">E-mailadress</label>
+		<input type="email" name="email" id="email" required />
+
+		<img src="images/witPattaLogo.png" alt="">
+		<li> Terms and conditions </li>
+		<li> Privacy policy</li>
+		<li> refund policy</li>
+		<li> returns </li>
+		<li> support </li>
+		<li> stores </li>
+		<li> jobs </li>
+		<li> patta mobile app </li>
+		<li> patta foundation </li>
+		<li> patta soundsystem </li>
+		<li> patta running team </li>
+		<li> patta cycling team </li>
 	</footer>
 
 
 
-	<script defer src="scripts/script.js"></script>
+	<script src="./scripts/script.js"></script>
 
 
 
