--- a/index.html
+++ b/index.html
@@ -20,35 +20,35 @@
 			Free shipping on eu orders above €250
 		</p>
 
-		<section>
+		<section class="icons">
 			<ul>
-				<li>
-					<img src="./images/pattaLogo.png" alt="">
-				</li>
+				<li> <img src="./images/pattaLogo.png" alt=""> </li>
+				<!-- <li> <img src="./images/zoekicon.png" alt=""> </li> -->
+				<!-- <li> <img src="./images/profileicon.png" alt=""> </li> -->
+				<!-- <li> <img src="./images/cijfericon.png" alt=""> </li> -->
 			</ul>
 		</section>
 
+
+		<button> Menu </button>
 		<nav>
 			<ul>
-				<li>
-					<button> Menu </button>
-				</li>
-				<li>New arrivals </li>
-				<li>Latest footwear</li>
-				<li> Autumn winter 2023</li>
-				<li> Apparel </li>
-				<li> Footwear </li>
-				<li> Collections </li>
-				<li> Accessories </li>
-				<li> Brands </li>
-				<li> Lookbooks </li>
-				<li> Blog </li>
-				<li> Raffles </li>
-				<li> Patta mobile app </li>
-				<li> In-store exclusives </li>
+				<li> <a href="#"> New arrivals </a> </li>
+				<li> <a href="#"> Latest footwear </a> </li>
+				<li> <a href="#"> Autumn winter 2023 </a> </li>
+				<li> <a href="#"> Apparel </a> </li>
+				<li> <a href="#"> Footwear </a> </li>
+				<li> <a href="#"> Collections </a> </li>
+				<li> <a href="#"> Accessories </a> </li>
+				<li> <a href="#"> Brands </a> </li>
+				<li> <a href="#"> Lookbooks </a> </li>
+				<li> <a href="#"> Blog </a> </li>
+				<li> <a href="#"> Raffles </a> </li>
+				<li> <a href="#"> Patta mobile app </a> </li>
+				<li> <a href="#"> In-store exclusives </a> </li>
 			</ul>
 		</nav>
-		<!-- menu burger maken hier -->
+		<!-- menu burger -->
 
 
 
@@ -70,49 +70,49 @@
 
 	<main>
 
-		<h1>Lookbook</h1>
+
 
 		<section>
-			<!-- header!! -->
+			<h1> <button> Lookbook <img aria-label="pijl" src="./images/arrowicon.png" alt=""> </button> </h1>
 			<ul>
 				<li>
-					<h2>Bonnefanten presents 'BLKNWS' by Khalil Joseph </h2>
-					<img src="./images/blog1.jpg" alt="">
+					<h2> <a href="#"> Bonnefanten presents 'BLKNWS' by Khalil Joseph </a> </h2>
+					<img src="./images/blog1.jpg" alt="emancipated space">
 				</li>
 
 				<li>
-					<h2> Patta homecoming 2019 capsule collection</h2>
-					<img src="./images/blog2.jpg" alt="">
+					<h2> <a href="#"> Patta homecoming 2019 capsule collection </a> </h2>
+					<img src="./images/blog2.jpg" alt="lagos">
 				</li>
 
 				<li>
-					<h2> Patta x C.P. comapany Milan launch event </h2>
-					<img src="./images/blog3.jpg" alt="">
+					<h2> <a href="#"> Patta x C.P. comapany Milan launch event </a> </h2>
+					<img src="./images/blog3.jpg" alt="c.p. company patta">
 				</li>
 
 				<li>
-					<h2> Patta by you </h2>
-					<img src="./images/blog4.jpg" alt="">
+					<h2> <a href="#"> Patta by you </a> </h2>
+					<img src="./images/blog4.jpg" alt="nike schoen">
 				</li>
 
 				<li>
-					<h2> #11/11 Bart Julius Peters </h2>
-					<img src="./images/blog5.jpg" alt="">
+					<h2> <a href="#"> #11/11 Bart Julius Peters </a> </h2>
+					<img src="./images/blog5.jpg" alt="foto van bart Julius">
 				</li>
 
 				<li>
-					<h2> Nocta as seen by patta </h2>
-					<img src="./images/blog6.webp" alt="">
+					<h2> <a href="#"> Nocta as seen by patta </a> </h2>
+					<img src="./images/blog6.webp" alt="nocta jas">
 				</li>
 
 				<li>
-					<h2> ss20 ripstop bag collection </h2>
-					<img src="./images/blog 7.webp" alt="">
+					<h2> <a href="#"> ss20 ripstop bag collection </a> </h2>
+					<img src="./images/blog 7.webp" alt="rijtje van jongste naar oudste">
 				</li>
 
 				<li>
-					<h2> patta w/ lasha </h2>
-					<img src="./images/blog8.webp" alt="">
+					<h2> <a href="#"> patta w/ lasha </a> </h2>
+					<img src="./images/blog8.webp" alt="lasha">
 				</li>
 
 			</ul>
@@ -121,25 +121,35 @@
 	</main>
 
 
+
 	<footer>
-		<h2> Subscribe to our newsletter </h2>
-
-		<label for="email">E-mailadress</label>
-		<input type="email" name="email" id="email" required />
-
-		<img src="images/witPattaLogo.png" alt="">
-		<li> Terms and conditions </li>
-		<li> Privacy policy</li>
-		<li> refund policy</li>
-		<li> returns </li>
-		<li> support </li>
-		<li> stores </li>
-		<li> jobs </li>
-		<li> patta mobile app </li>
-		<li> patta foundation </li>
-		<li> patta soundsystem </li>
-		<li> patta running team </li>
-		<li> patta cycling team </li>
+		<section>
+			<h2 aria-label="Orgin"> <img src="./images/witPattaLogo2.png" alt=""> </h2>
+			<p>Out of love and necessity rather than profit and novelty,
+				Patta opened its doors in 2004. Situated right in the city heart of Amsterdam,
+				the store became the centre of attention by bringing new excitement to the Dutch streetwear scene…</p>
+		</section>
+		<form action="">
+			<label for="">Subscribe to our newsletter</label>
+			<input type="email">
+			<button type="submit">send</button>
+		</form>
+		<nav>
+			<ul>
+				<li> <a href="#"> Terms and conditions </a> </li>
+				<li> <a href="#"> Privacy policy </a> </li>
+				<li> <a href="#"> refund policy </a> </li>
+				<li> <a href="#"> returns </a> </li>
+				<li> <a href="#"> support </a> </li>
+				<li> <a href="#"> stores </a> </li>
+				<li> <a href="#"> jobs </a> </li>
+				<li> <a href="#"> patta mobile app </a> </li>
+				<li> <a href="#"> patta foundation </a> </li>
+				<li> <a href="#"> patta soundsystem </a> </li>
+				<li> <a href="#"> patta running team </a> </li>
+				<li> <a href="#"> patta cycling team </a> </li>
+			</ul>
+		</nav>
 	</footer>
 
 
