--- a/shop.html
+++ b/shop.html
@@ -21,40 +21,38 @@
 			Free shipping on eu orders above €250
 		</p>
 
-		<nav>
+		<section class="icons">
 			<ul>
-				<li>
-					<button> Menu </button>
-				</li>
-				<li> New arrivals </li>
-				<li> Latest footwear</li>
-				<li> Autumn winter 2023</li>
-				<li> Apparel </li>
-				<li> Footwear </li>
-				<li> Collections </li>
-				<li> Accessories </li>
-				<li> Brands </li>
-				<li> Lookbooks </li>
-				<li> Blog </li>
-				<li> Raffles </li>
-				<li> Patta mobile app </li>
-				<li> In-store exclusives </li>
-			</ul>
-		</nav>
-		<!-- menu burger maken hier -->
-
-		<section>
-			<ul>
-				<li>
-					<img src="./images/pattaLogo.png" alt="">
-				</li>
+				<li> <img src="./images/pattaLogo.png" alt=""> </li>
+				<li> <img src="./images/zoekicon.png" alt=""> </li>
+				<li> <img src="./images/profileicon.png" alt=""> </li>
+				<li> <img src="./images/cijfericon.png" alt=""> </li>
 			</ul>
 		</section>
 
 
+		<button> Menu </button>
 		<nav>
 			<ul>
-				<li> <a href="#"> Comming soon </a> </li>
+				<li> <a href="#"> New arrivals </a> </li>
+				<li> <a href="#"> Latest footwear </a> </li>
+				<li> <a href="#"> Autumn winter 2023 </a> </li>
+				<li> <a href="#"> Apparel </a> </li>
+				<li> <a href="#"> Footwear </a> </li>
+				<li> <a href="#"> Collections </a> </li>
+				<li> <a href="#"> Accessories </a> </li>
+				<li> <a href="#"> Brands </a> </li>
+				<li> <a href="#"> Lookbooks </a> </li>
+				<li> <a href="#"> Blog </a> </li>
+				<li> <a href="#"> Raffles </a> </li>
+				<li> <a href="#"> Patta mobile app </a> </li>
+				<li> <a href="#"> In-store exclusives </a> </li>
+			</ul>
+		</nav>
+
+
+		<nav>
+			<ul>
 				<li> <a href="#"> New arrivals </a> </li>
 				<li> <a href="#"> Autumn winter 2023 </a> </li>
 				<li> <a href="#"> Apparel </a> </li>
@@ -118,20 +116,37 @@
 	</main>
 
 	<footer>
-		<h2> Subscribe to our newsletter </h2>
-		<img src="./images/witPattaLogo.png" alt="">
-		<li> <a href="#"> Terms and conditions </a> </li>
-		<li> <a href="#"> Privacy policy </a> </li>
-		<li> <a href="#"> refund policy </a> </li>
-		<li> <a href="#"> returns </a> </li>
-		<li> <a href="#"> support </a> </li>
-		<li> <a href="#"> stores </a> </li>
-		<li> <a href="#"> jobs </a> </li>
-		<li> <a href="#"> patta mobile app </a> </li>
-		<li> <a href="#"> patta foundation </a> </li>
-		<li> <a href="#"> patta soundsystem </a> </li>
-		<li> <a href="#"> patta running team </a> </li>
-		<li> <a href="#"> patta cycling team </a> </li>
+		<section>
+			<h2 aria-label="Orgin"> <img src="./images/witPattaLogo2.png" alt=""> </h2>
+			<p>Out of love and necessity rather than profit and novelty,
+				Patta opened its doors in 2004. Situated right in the city heart of Amsterdam,
+				the store became the centre of attention by bringing new excitement to the Dutch streetwear scene…</p>
+		</section>
+		<form action="">
+			<label for="">Subscribe to our newsletter</label>
+			<input type="email">
+			<button type="submit">send</button>
+		</form>
+		<nav>
+			<ul>
+				<li> <a href="#"> Terms and conditions </a> </li>
+				<li> <a href="#"> Privacy policy </a> </li>
+				<li> <a href="#"> refund policy </a> </li>
+				<li> <a href="#"> returns </a> </li>
+				<li> <a href="#"> support </a> </li>
+				<li> <a href="#"> stores </a> </li>
+				<li> <a href="#"> jobs </a> </li>
+				<li> <a href="#"> patta mobile app </a> </li>
+				<li> <a href="#"> patta foundation </a> </li>
+				<li> <a href="#"> patta soundsystem </a> </li>
+				<li> <a href="#"> patta running team </a> </li>
+				<li> <a href="#"> patta cycling team </a> </li>
+			</ul>
+		</nav>
 	</footer>
+
+</body>
+
+<script src="./scripts/script.js"></script>
 
 </body>
