--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 
 
 		<section>
-			<h1> <button> Lookbook <img aria-label="pijl" src="./images/arrowicon.png" alt=""> </button> </h1>
+			<h1> <button> Lookbook </button> </h1>
 			<ul>
 				<li>
 					<h2> <a href="#"> Bonnefanten presents 'BLKNWS' by Khalil Joseph </a> </h2>
