--- a/index.html
+++ b/index.html
@@ -14,23 +14,35 @@
 </head>
 
 <body>
-
 	<header>
-		<p>
-			Free shipping on eu orders above €250
-		</p>
+		<section>
+			<h1> Promo </h1>
+			<p>
+				Free shipping on eu orders above €250
+			</p>
+		</section>
 
-		<section class="icons">
+		<!-- header iconen -->
+		<section>
+			<h2> Header </h2>
 			<ul>
-				<li> <img src="./images/pattaLogo.png" alt=""> </li>
-				<!-- <li> <img src="./images/zoekicon.png" alt=""> </li> -->
-				<!-- <li> <img src="./images/profileicon.png" alt=""> </li> -->
-				<!-- <li> <img src="./images/cijfericon.png" alt=""> </li> -->
+				<li>
+					<p> UK </p> <img src="./images/BritsVlag.png" alt="british flag">
+				</li>
+				<li> <img src="./images/pattaLogo.png" alt="Patta logo"> </li>
+				<li> <img src="./images/zoekicon.png" alt="Search"> </li>
+				<li> <img src="./images/profileicon.png" alt="Profile"> </li>
+				<li> <img src="./images/cijfericon.png" alt="shopping cart"> </li>
 			</ul>
 		</section>
 
-
-		<button> Menu </button>
+		<!-- menu burger -->
+		<button aria-label="menu">
+			<span> </span>
+			<span> </span>
+			<span> </span>
+			Menu
+		</button>
 		<nav>
 			<ul>
 				<li> <a href="#"> New arrivals </a> </li>
@@ -48,14 +60,11 @@
 				<li> <a href="#"> In-store exclusives </a> </li>
 			</ul>
 		</nav>
-		<!-- menu burger -->
 
-
-
-
+		<!-- slider menu -->
 		<nav>
 			<ul>
-				<li> <a href="#"> New collection </a> </li>
+				<li> <a href="./shop.html"> New collection </a> </li>
 				<li> <a href="#"> Autumn winter 2023 </a> </li>
 				<li> <a href="#"> Apparel </a> </li>
 				<li> <a href="#"> Footwear </a> </li>
@@ -65,73 +74,73 @@
 				<li> <a href="#"> Blog </a> </li>
 			</ul>
 		</nav>
-
 	</header>
 
 	<main>
-
-
-
 		<section>
-			<h1> <button> Lookbook </button> </h1>
+			<section>
+				<h2> <button> Lookbook </button> </h2>
+				<ul>
+					<li> all </li>
+					<li> Lookbooks </li>
+					<li> art </li>
+					<li> patta soundsystem </li>
+					<li> publicity </li>
+					<li> music </li>
+					<li> sneakers </li>
+				</ul>
+			</section>
 			<ul>
 				<li>
 					<h2> <a href="#"> Bonnefanten presents 'BLKNWS' by Khalil Joseph </a> </h2>
 					<img src="./images/blog1.jpg" alt="emancipated space">
-				</li>
 
+				</li>
 				<li>
 					<h2> <a href="#"> Patta homecoming 2019 capsule collection </a> </h2>
 					<img src="./images/blog2.jpg" alt="lagos">
 				</li>
-
 				<li>
 					<h2> <a href="#"> Patta x C.P. comapany Milan launch event </a> </h2>
 					<img src="./images/blog3.jpg" alt="c.p. company patta">
 				</li>
-
 				<li>
 					<h2> <a href="#"> Patta by you </a> </h2>
 					<img src="./images/blog4.jpg" alt="nike schoen">
 				</li>
-
 				<li>
 					<h2> <a href="#"> #11/11 Bart Julius Peters </a> </h2>
 					<img src="./images/blog5.jpg" alt="foto van bart Julius">
 				</li>
-
 				<li>
 					<h2> <a href="#"> Nocta as seen by patta </a> </h2>
-					<img src="./images/blog6.webp" alt="nocta jas">
+					<img src="./images/blog6.webp" alt="nocta jacket">
 				</li>
-
 				<li>
 					<h2> <a href="#"> ss20 ripstop bag collection </a> </h2>
-					<img src="./images/blog 7.webp" alt="rijtje van jongste naar oudste">
+					<img src="./images/blog7.webp" alt="row of people youngest to oldest">
 				</li>
-
 				<li>
 					<h2> <a href="#"> patta w/ lasha </a> </h2>
 					<img src="./images/blog8.webp" alt="lasha">
 				</li>
-
 			</ul>
 		</section>
-
 	</main>
-
-
 
 	<footer>
 		<section>
-			<h2 aria-label="Orgin"> <img src="./images/witPattaLogo2.png" alt=""> </h2>
+			<h2 aria-label="Orgin"> <img src="./images/witPattaLogo2.png" alt="Patta logo"> </h2>
 			<p>Out of love and necessity rather than profit and novelty,
-				Patta opened its doors in 2004. Situated right in the city heart of Amsterdam,
-				the store became the centre of attention by bringing new excitement to the Dutch streetwear scene…</p>
+				Patta opened its doors in 2004. Situated right in the city heart of Amsterdam, the store became the
+				centre of attention by bringing new excitement to the Dutch streetwear scene…</p>
+			<a href="#">
+				<p>Read more</p>
+			</a>
 		</section>
-		<form action="">
-			<label for="">Subscribe to our newsletter</label>
-			<input type="email">
+		<form action="./index.html">
+			<label for="email">Subscribe to our newsletter</label>
+			<input type="email" id="email">
 			<button type="submit">send</button>
 		</form>
 		<nav>
@@ -151,12 +160,7 @@
 			</ul>
 		</nav>
 	</footer>
-
-
-
 	<script src="./scripts/script.js"></script>
-
-
 
 </body>
 
