--- a/shop.html
+++ b/shop.html
@@ -14,24 +14,36 @@
 </head>
 
 <body>
-
-
 	<header>
-		<p>
-			Free shipping on eu orders above €250
-		</p>
+		<section>
+			<h1> Promo </h1>
+			<p>
+				Free shipping on eu orders above €250
+			</p>
+		</section>
 
-		<section class="icons">
+		<!-- header iconen -->
+		<section>
+			<h2> Header </h2>
 			<ul>
-				<li> <img src="./images/pattaLogo.png" alt=""> </li>
-				<li> <img src="./images/zoekicon.png" alt=""> </li>
-				<li> <img src="./images/profileicon.png" alt=""> </li>
-				<li> <img src="./images/cijfericon.png" alt=""> </li>
+
+				<li>
+					<p> UK</p> <img src="./images/BritsVlag.png" alt="british flag">
+				</li>
+				<li> <img src="./images/pattaLogo.png" alt="Patta logo"> </li>
+				<li> <img src="./images/zoekicon.png" alt="Search"> </li>
+				<li> <img src="./images/profileicon.png" alt="Profile"> </li>
+				<li> <img src="./images/cijfericon.png" alt="shopping cart"> </li>
 			</ul>
 		</section>
 
-
-		<button> Menu </button>
+		<!-- menu burger -->
+		<button>
+			<span> </span>
+			<span> </span>
+			<span> </span>
+			Menu
+		</button>
 		<nav>
 			<ul>
 				<li> <a href="#"> New arrivals </a> </li>
@@ -50,7 +62,7 @@
 			</ul>
 		</nav>
 
-
+		<!-- slider menu -->
 		<nav>
 			<ul>
 				<li> <a href="#"> New arrivals </a> </li>
@@ -60,71 +72,99 @@
 				<li> <a href="#"> Collections </a> </li>
 				<li> <a href="#"> Acessoires </a> </li>
 				<li> <a href="#"> Brands </a> </li>
-				<li> <a href="#"> Blog </a> </li>
+				<li> <a href="./index.html"> Blog </a> </li>
 			</ul>
 		</nav>
-
 	</header>
 
+	<!-- filter -->
 	<main>
+		<section>
+			<h1> Tops </h1>
+			<h2> <button class="fullSize"> Size <img src="./images/arrowicon.png" alt=""> </button> </h2>
+			<h3> <button class="fullSort"> Sort <img src="./images/arrowicon.png" alt=""> </button> </h3>
+			<h4> <button> Filter </button> </h4>
+		</section>
 
+		<!-- kleding -->
 		<section>
 			<ul>
 				<li>
-					<h2>byParra Trees In Wind Puffer Jacket (Beige)</h2>
+					<h2> <a href=""> byParra Trees In Wind Puffer Jacket (Beige) </a> </h2>
 					<p>€275,00</p>
-					<img src="./images/top1.webp" alt="">
+					<p>Few left</p>
+					<button> Quick shop </button>
+					<img src="./images/top1.webp" alt="byParra Trees In Wind Puffer Jacket Beige closed">
+					<img src="./images/top1open.webp" alt="byParra Trees In Wind Puffer Jacket Beige open">
 				</li>
 				<li>
-					<h2>byParra Trees In Wind Puffer Jacket (Black)</h2>
+					<h2> <a href="">cbyParra Trees In Wind Puffer Jacket (Black) </a> </h2>
 					<p>€275,00</p>
-					<img src="./images/top2.webp" alt="">
+					<p>New</p>
+					<button> Quick shop </button>
+					<img src="./images/top2open.webp" alt="byParra Trees In Wind Puffer Jacket Black closed">
+					<img src="./images/top2.webp" alt="byParra Trees In Wind Puffer Jacket Black open">
 				</li>
 				<li>
-					<h2> byParra Run Sit & Bike Varsity Jacket (Dark Red)</h2>
+					<h2> <a href=""> byParra Run Sit & Bike Varsity Jacket (Dark Red) </a> </h2>
 					<p>€295,00</p>
-					<img src="./images/top3.webp" alt="">
+					<button> Quick shop </button>
+					<img src="./images/top3open.webp" alt=" back of byParra Run Sit & Bike Varsity Jacket Dark Red ">
+					<img src="./images/top3.webp" alt="front of byParra Run Sit & Bike Varsity Jacket Dark Red ">
 				</li>
 				<li>
-					<h2>Awake NY X Gil Scott Heron Hoodie (Slate Blue)</h2>
+					<h2> <a href=""> Awake NY X Gil Scott Heron Hoodie (Slate Blue) </a></h2>
 					<p>€161,00</p>
-					<img src="./images/top4.webp" alt="">
+					<button> Quick shop </button>
+					<img src="./images/top4open.webp" alt="back of Awake NY X Gil Scott Heron Hoodie Slate Blue ">
+					<img src="./images/top4.webp" alt="front of Awake NY X Gil Scott Heron Hoodie Slate Blue ">
 				</li>
 				<li>
-					<h2>Awake NY X Gil Scott Heron Hoodie (Charcoal)</h2>
+					<h2> <a href=""> Awake NY X Gil Scott Heron Hoodie (Charcoal) </a> </h2>
 					<p>€160,00</p>
-					<img src="./images/top5.webp" alt="">
+					<button> Quick shop </button>
+					<img src="./images/top5.webp" alt="front of Awake NY X Gil Scott Heron Hoodie Charcoal">
+					<img src="./images/top5open.webp" alt="back of Awake NY X Gil Scott Heron Hoodie Charcoal">
 				</li>
 				<li>
-					<h2>Patta Ribbons Knitted Sweater (Multi)</h2>
+					<h2> <a href=""> Patta Ribbons Knitted Sweater (Multi) </a> </h2>
 					<p>€150,00</p>
-					<img src="./images/top6.webp" alt="">
+					<button> Quick shop </button>
+					<img src="./images/top6.webp" alt="Patta Ribbons Knitted Sweater Multi">
+					<img src="./images/top6open.webp" alt="model wearing Patta Ribbons Knitted Sweater Multi">
 				</li>
 				<li>
-					<h2>Patta Jungle Knitted Longsleeve T-Shirt (Multi/Grayscale)</h2>
+					<h2> <a href=""> Patta Jungle Knitted Longsleeve T-Shirt (Multi/Grayscale) </a> </h2>
 					<p>€145,00</p>
-					<img src="./images/top7.webp" alt="">
+					<button> Quick shop </button>
+					<img src="./images/top7.webp" alt="Patta Jungle Knitted Longsleeve T-Shirt Multi/Grayscale">
+					<img src="./images/top7open.webp"
+						alt="model wearing Patta Jungle Knitted Longsleeve T-Shirt Multi/Grayscale">
 				</li>
 				<li>
-					<h2>Awake NY Printed Charm Logo Hoodie (Dark Mauve)</h2>
+					<h2> <a href=""> Awake NY Printed Charm Logo Hoodie (Dark Mauve) </a> </h2>
 					<p>€150,00</p>
-					<img src="./images/top8.webp" alt="">
+					<button> Quick shop </button>
+					<img src="./images/top8open.jpg" alt="Awake NY Printed Charm Logo Hoodie Dark Mauve">
+					<img src="./images/top8.webp" alt="close up of Awake NY Printed Charm Logo Hoodie Dark Mauve">
 				</li>
 			</ul>
 		</section>
-
 	</main>
 
 	<footer>
 		<section>
-			<h2 aria-label="Orgin"> <img src="./images/witPattaLogo2.png" alt=""> </h2>
+			<h2 aria-label="Orgin"> <img src="./images/witPattaLogo2.png" alt="Patta logo"> </h2>
 			<p>Out of love and necessity rather than profit and novelty,
-				Patta opened its doors in 2004. Situated right in the city heart of Amsterdam,
-				the store became the centre of attention by bringing new excitement to the Dutch streetwear scene…</p>
+				Patta opened its doors in 2004. Situated right in the city heart of Amsterdam, the store became the
+				centre of attention by bringing new excitement to the Dutch streetwear scene…</p>
+			<a href="#">
+				<p>Read more</p>
+			</a>
 		</section>
-		<form action="">
-			<label for="">Subscribe to our newsletter</label>
-			<input type="email">
+		<form action="./index.html">
+			<label for="email">Subscribe to our newsletter</label>
+			<input type="email" id="email">
 			<button type="submit">send</button>
 		</form>
 		<nav>
@@ -145,8 +185,6 @@
 		</nav>
 	</footer>
 
-</body>
-
-<script src="./scripts/script.js"></script>
+	<script src="./scripts/script.js"></script>
 
 </body>
