--- a/index.html
+++ b/index.html
@@ -16,25 +16,26 @@
 <body>
 	<header>
 		<section>
-			<h1> Promo </h1>
+			<h1> Patta blog </h1>
 			<p>
 				Free shipping on eu orders above €250
 			</p>
 		</section>
 
 		<!-- header iconen -->
-		<section>
+		<nav>
 			<h2> Header </h2>
+			<select name="talen" id="talen">
+				<option value="">UK</option>
+				<option value="">NL</option>
+			</select>
+			<a href=""> <img src="./images/pattaLogo.png" alt="Patta logo"> </a>
 			<ul>
-				<li>
-					<p> UK </p> <img src="./images/BritsVlag.png" alt="british flag">
-				</li>
-				<li> <img src="./images/pattaLogo.png" alt="Patta logo"> </li>
-				<li> <img src="./images/zoekicon.png" alt="Search"> </li>
-				<li> <img src="./images/profileicon.png" alt="Profile"> </li>
-				<li> <img src="./images/cijfericon.png" alt="shopping cart"> </li>
+				<li> <a href=""> <img src="./images/zoekicon.png" alt="Search"> </a> </li>
+				<li> <a href=""> <img src="./images/profileicon.png" alt="Profile"> </a> </li>
+				<li> <a href=""> <img src="./images/cijfericon.png" alt="shopping cart"> </a> </li>
 			</ul>
-		</section>
+		</nav>
 
 		<!-- menu burger -->
 		<button aria-label="menu">
@@ -78,50 +79,51 @@
 
 	<main>
 		<section>
-			<section>
-				<h2> <button> Lookbook </button> </h2>
-				<ul>
-					<li> all </li>
-					<li> Lookbooks </li>
-					<li> art </li>
-					<li> patta soundsystem </li>
-					<li> publicity </li>
-					<li> music </li>
-					<li> sneakers </li>
-				</ul>
-			</section>
+			<h3> <button> Lookbook </button> </h3>
+			<ul>
+				<li> <a href=""> all </a></li>
+				<li> <a href=""> publicity </a> </li>
+				<li> <a href=""> Lookbooks </a> </li>
+				<li> <a href=""> music </a> </li>
+				<li> <a href=""> art </a> </li>
+				<li> <a href=""> sneakers </a></li>
+				<li> <a href=""> patta soundsystem </a> </li>
+			</ul>
+		</section>
+
+		<section>
 			<ul>
 				<li>
-					<h2> <a href="#"> Bonnefanten presents 'BLKNWS' by Khalil Joseph </a> </h2>
+					<h4> <a href="#"> Bonnefanten presents 'BLKNWS' by Khalil Joseph </a> </h4>
 					<img src="./images/blog1.jpg" alt="emancipated space">
 
 				</li>
 				<li>
-					<h2> <a href="#"> Patta homecoming 2019 capsule collection </a> </h2>
+					<h4> <a href="#"> Patta homecoming 2019 capsule collection </a> </h4>
 					<img src="./images/blog2.jpg" alt="lagos">
 				</li>
 				<li>
-					<h2> <a href="#"> Patta x C.P. comapany Milan launch event </a> </h2>
+					<h4> <a href="#"> Patta x C.P. comapany Milan launch event </a> </h4>
 					<img src="./images/blog3.jpg" alt="c.p. company patta">
 				</li>
 				<li>
-					<h2> <a href="#"> Patta by you </a> </h2>
+					<h4> <a href="#"> Patta by you </a> </h4>
 					<img src="./images/blog4.jpg" alt="nike schoen">
 				</li>
 				<li>
-					<h2> <a href="#"> #11/11 Bart Julius Peters </a> </h2>
+					<h4> <a href="#"> #11/11 Bart Julius Peters </a> </h4>
 					<img src="./images/blog5.jpg" alt="foto van bart Julius">
 				</li>
 				<li>
-					<h2> <a href="#"> Nocta as seen by patta </a> </h2>
+					<h4> <a href="#"> Nocta as seen by patta </a> </h4>
 					<img src="./images/blog6.webp" alt="nocta jacket">
 				</li>
 				<li>
-					<h2> <a href="#"> ss20 ripstop bag collection </a> </h2>
+					<h4> <a href="#"> ss20 ripstop bag collection </a> </h4>
 					<img src="./images/blog7.webp" alt="row of people youngest to oldest">
 				</li>
 				<li>
-					<h2> <a href="#"> patta w/ lasha </a> </h2>
+					<h4> <a href="#"> patta w/ lasha </a> </h4>
 					<img src="./images/blog8.webp" alt="lasha">
 				</li>
 			</ul>
@@ -135,7 +137,7 @@
 				Patta opened its doors in 2004. Situated right in the city heart of Amsterdam, the store became the
 				centre of attention by bringing new excitement to the Dutch streetwear scene…</p>
 			<a href="#">
-				<p>Read more</p>
+				<p>Read more about the history of patta</p>
 			</a>
 		</section>
 		<form action="./index.html">
