--- a/shop.html
+++ b/shop.html
@@ -16,26 +16,26 @@
 <body>
 	<header>
 		<section>
-			<h1> Promo </h1>
+			<h1> Patta New Collection </h1>
 			<p>
 				Free shipping on eu orders above €250
 			</p>
 		</section>
 
 		<!-- header iconen -->
-		<section>
+		<nav>
 			<h2> Header </h2>
+			<select name="talen" id="talen">
+				<option value="">UK</option>
+				<option value="">NL</option>
+			</select>
+			<a href=""> <img src="./images/pattaLogo.png" alt="Patta logo"> </a>
 			<ul>
-
-				<li>
-					<p> UK</p> <img src="./images/BritsVlag.png" alt="british flag">
-				</li>
-				<li> <img src="./images/pattaLogo.png" alt="Patta logo"> </li>
-				<li> <img src="./images/zoekicon.png" alt="Search"> </li>
-				<li> <img src="./images/profileicon.png" alt="Profile"> </li>
-				<li> <img src="./images/cijfericon.png" alt="shopping cart"> </li>
+				<li> <a href=""> <img src="./images/zoekicon.png" alt="Search"> </a> </li>
+				<li> <a href=""> <img src="./images/profileicon.png" alt="Profile"> </a> </li>
+				<li> <a href=""> <img src="./images/cijfericon.png" alt="shopping cart"> </a> </li>
 			</ul>
-		</section>
+		</nav>
 
 		<!-- menu burger -->
 		<button>
@@ -80,10 +80,10 @@
 	<!-- filter -->
 	<main>
 		<section>
-			<h1> Tops </h1>
-			<h2> <button class="fullSize"> Size <img src="./images/arrowicon.png" alt=""> </button> </h2>
-			<h3> <button class="fullSort"> Sort <img src="./images/arrowicon.png" alt=""> </button> </h3>
-			<h4> <button> Filter </button> </h4>
+			<h2> Tops </h2>
+			<h3> <button> Size <img src="./images/arrowicon.png" alt=""> </button> </h3>
+			<h4> <button> Sort <img src="./images/arrowicon.png" alt=""> </button> </h4>
+			<h5> <button> Filter </button> </h5>
 		</section>
 
 		<!-- kleding -->
@@ -159,7 +159,7 @@
 				Patta opened its doors in 2004. Situated right in the city heart of Amsterdam, the store became the
 				centre of attention by bringing new excitement to the Dutch streetwear scene…</p>
 			<a href="#">
-				<p>Read more</p>
+				<p>Read more about the history of patta</p>
 			</a>
 		</section>
 		<form action="./index.html">
