--- a/index.html
+++ b/index.html
@@ -81,13 +81,13 @@
 		<section>
 			<h3> <button> Lookbook </button> </h3>
 			<ul>
-				<li> <a href=""> all </a></li>
-				<li> <a href=""> publicity </a> </li>
-				<li> <a href=""> Lookbooks </a> </li>
-				<li> <a href=""> music </a> </li>
-				<li> <a href=""> art </a> </li>
-				<li> <a href=""> sneakers </a></li>
-				<li> <a href=""> patta soundsystem </a> </li>
+				<li> <a href="#"> all </a></li>
+				<li> <a href="#"> publicity </a> </li>
+				<li> <a href="#"> Lookbooks </a> </li>
+				<li> <a href="#"> music </a> </li>
+				<li> <a href="#"> art </a> </li>
+				<li> <a href="#"> sneakers </a></li>
+				<li> <a href="#"> patta soundsystem </a> </li>
 			</ul>
 		</section>
 
